# Part_4-gut-pacemaker

./: README.md
ydan124_compendium/Embedded Code/: CMakeLists.txt  NEO_transform.c  NEO_transform.h  artifact_detect.c  artifact_detect.h  artifact_remove.c  artifact_remove.h  example_cython.py  extract_data_script.m  fir_51.mat  highpass_function.c  highpass_function.h  lowpass_function.c  lowpass_function.h  main.c  makefile.txt  math_functions_wrapper.pyx  moving_average_1s_window.c  moving_average_1s_window.h  ppval.c  ppval.h  py_c_run.c  py_c_run.h  py_c_run.pxd  readme.txt  visualise_signal.m
ydan124_compendium/Exhibition Day/: main.py
ydan124_compendium/Experimental Data (Auckland BioEngineering Institute)/: pig37exp2.mat
ydan124_compendium/Results/: Algorithm Results.xlsx  Result Conditions.docx  ~$Algorithm Results.xlsx  ~$sult Conditions.docx
